# oddio

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: adapt.rs  demo.rs  doppler.rs  file.rs  offline.rs  realtime.rs  simple.rs  wav.rs
src/: adapt.rs  constant.rs  cycle.rs  downmix.rs  fader.rs  filter.rs  frame.rs  frames.rs  gain.rs  handle.rs  lib.rs  math.rs  mixer.rs  reinhard.rs  resample.rs  ring.rs  samples.rs  set.rs  signal.rs  sine.rs  smooth.rs  sound.rs  source.rs  spatial.rs  speed.rs  spsc.rs  stop.rs  stream.rs  strided.rs  swap.rs  tanh.rs  worker.rs
src/math/: libm.rs  mod.rs  std.rs
