[package]
name = "oddio"
version = "0.4.1"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ralith/oddio"
description = "Lightweight game audio library"
categories = ["multimedia::audio", "game-development"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
mint = "0.5.5"

[dev-dependencies]
cpal = "0.13.1"
hound = "3.4"
