[package]
name = "oddio"
version = "0.7.3"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ralith/oddio"
description = "Lightweight game audio library"
categories = ["multimedia::audio", "game-development"]

[badges]
maintenance = { status = "actively-developed" }

[features]
no_std = ["libm"]

[dependencies]
mint = "0.5.5"
libm = { version = "0.2.1", optional = true }

[dev-dependencies]
cpal = "0.13.1"
hound = "3.4"
